# TDDgtest

./: CMakeLists.txt  main.cpp
gmock-1.7.0/: Makefile  config.status  libtool
gmock-1.7.0/gtest/: Makefile  config.status  libtool
gmock-1.7.0/gtest/lib/: libgtest_main.la
gmock-1.7.0/gtest/lib/.libs/: libgtest.so.0.0.0  libgtest_main.so.0.0.0
gmock-1.7.0/lib/: libgmock_main.la
gmock-1.7.0/lib/.libs/: libgmock.so.0.0.0  libgmock_main.so.0.0.0
gmock-1.7.0/scripts/: gmock-config
